pkgdata_DATA =						\
	card.png					\
	cn22.tex					\
	date-stamp.png					\
	device-label.tex				\
	drop-and-go.png					\
	invoice-straps.tex				\
	invoice.tex					\
	page.png					\
	post-office.png					\
	shipping-label.tex				\
	signature.png					\
	template.svg

EXTRA_DIST =						\
	$(pkgdata_DATA)

-include $(top_srcdir)/git.mk

